--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 Flask==0.10.1
+Flask-Cors==2.0.0
 Flask-HTTPAuth==2.4.0
 Flask-SQLAlchemy==2.0
 Jinja2==2.7.3
 MarkupSafe==0.23
 PyYAML==3.11
 SQLAlchemy==0.9.9
-Werkzeug==0.10.1
+Werkzeug==0.10.4
 awscli==1.7.20
 awsebcli==3.2
 bcdoc==0.13.0
