--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 Flask==0.10.1
-Flask-Cors==2.0.0
+Flask-Cors==2.0.1
 Flask-HTTPAuth==2.4.0
+Flask-Migrate==1.4.0
 Flask-SQLAlchemy==2.0
+Flask-Script==2.0.5
 Jinja2==2.7.3
+Mako==1.0.1
 MarkupSafe==0.23
 PyYAML==3.11
 SQLAlchemy==0.9.9
 Werkzeug==0.10.4
+alembic==0.7.6
 awscli==1.7.20
 awsebcli==3.2
 bcdoc==0.13.0
